TS-2766: HdrHeap::coalesce_str_heaps doesn't properly calculate new heap size