proxy/hdrs/HTTP.cc
@@ -1687,6 +1687,17 @@ HTTPHdrImpl::move_strings(HdrStrHeap *new_heap)
   }
 }
 
+size_t
+HTTPHdrImpl::strings_length() {
+  size_t ret = 0;
+  if (m_polarity == HTTP_TYPE_REQUEST) {
+   ret += u.req.m_len_method;
+  } else if (m_polarity == HTTP_TYPE_RESPONSE) {
+   ret += u.resp.m_len_reason;
+  }
+  return ret;
+}
+
 void
 HTTPHdrImpl::check_strings(HeapCheck *heaps, int num_heaps)
 {
